force-app/src/objects/c2g__codaPayment__c.object
<CustomObject>
    <customHelpPage>c2g__codahelppayment</customHelpPage>
    <description>Stores header details for a payment proposal.</description>
    <fields>
        <fullName>CTCM__Parent_Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Refers the payment from this one is derived after split</inlineHelpText>
        <label>Parent Payment</label>
        <referenceTo>c2g__codaPayment__c</referenceTo>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CTCM__PaymentFileLocation__c</fullName>
        <label>PaymentFileLocation</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__is_G_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is G Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTCM__splitJobId3__c</fullName>
        <inlineHelpText>for storing jobId of split batch of payment proposal line</inlineHelpText>
        <label>splitJobId3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__xmlJobId1__c</fullName>
        <label>xmlJobId1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__xmlJobId2__c</fullName>
        <label>xmlJobId2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__AccountCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipName>PaymentsAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ApexJobId__c</fullName>
        <label>Apex Job ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BankAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>c2g__codaBankAccount__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__BatchProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch Process</label>
        <referenceTo>c2g__fflib_BatchProcess__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__BatchableContextId__c</fullName>
        <label>Batchable Context Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CWODimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>c2g__codaDimension1__c.c2g__Disabled__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipName>PaymentsCWO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CWODimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>c2g__codaDimension2__c.c2g__Disabled__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipName>PaymentsCWO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CWODimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>c2g__codaDimension3__c.c2g__Disabled__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipName>PaymentsCWO</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ChecksPrintDate__c</fullName>
        <label>Checks Print Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__ChecksPrinted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checks Printed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__ClickedPay__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clicked Pay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CreatedByPaymentsPlus__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked then the payment was be created by the new screen</description>
        <label>Created by Payments Plus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CurrencyMode__c</fullName>
        <label>Currency Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                    <default>true</default>
                    <label>Account</label>
                </value>
                <value>
                    <fullName>Document</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__CurrencyWriteOffLocalGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency Write-Off Local GLA</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Payments Currency Write-off Local GLA</relationshipLabel>
        <relationshipName>PaymentsCurrencyWriteOffLocalGLA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CurrencyWriteOffLoss__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The currency exchange loss GLA. Required for some countries where currency gains and losses must be differentiated.</description>
        <label>Currency Write-Off Loss GLA</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Payments (Currency Write-Off Loss)</relationshipLabel>
        <relationshipName>PaymentsCurrencyWriteOffLoss</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CurrencyWriteOff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Currency Write-Off GLA</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Payments (Currency Write-off)</relationshipLabel>
        <relationshipName>PaymentsCurrencyWriteOff</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__DiscardReason__c</fullName>
        <description>The reason this Payment was discarded.</description>
        <label>Discard Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__DiscountDate__c</fullName>
        <label>Discount Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__DiscountRollup__c</fullName>
        <label>Deprecated: Discount</label>
        <summarizedField>c2g__codaPaymentAccountLineItem__c.c2g__Discount__c</summarizedField>
        <summaryForeignKey>c2g__codaPaymentAccountLineItem__c.c2g__Payment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__DiscountTotal__c</fullName>
        <label>Discount</label>
        <summarizedField>c2g__codaPaymentAccountLineItem__c.c2g__DiscountTotal__c</summarizedField>
        <summaryFilterItems>
            <field>c2g__codaPaymentAccountLineItem__c.c2g__AccountSelected__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__codaPaymentAccountLineItem__c.c2g__Payment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__Discount__c</fullName>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DocumentCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipName>PaymentsDC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DualRate__c</fullName>
        <label>Dual Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DueDate__c</fullName>
        <label>Due Date (To)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__ErrorControl__c</fullName>
        <label>Error Control</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Retrieving</fullName>
                </value>
                <value>
                    <fullName>Selecting</fullName>
                </value>
                <value>
                    <fullName>Background Posting</fullName>
                </value>
                <value>
                    <fullName>Discarding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__GeneralLedgerAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Ledger Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Payments (General Ledger Account)</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__GrossValueRollup__c</fullName>
        <label>Deprecated: Gross Value</label>
        <summarizedField>c2g__codaPaymentAccountLineItem__c.c2g__GrossValue__c</summarizedField>
        <summaryForeignKey>c2g__codaPaymentAccountLineItem__c.c2g__Payment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__GrossValueTotal__c</fullName>
        <label>Gross Value</label>
        <summarizedField>c2g__codaPaymentAccountLineItem__c.c2g__GrossValueTotal__c</summarizedField>
        <summaryFilterItems>
            <field>c2g__codaPaymentAccountLineItem__c.c2g__AccountSelected__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__codaPaymentAccountLineItem__c.c2g__Payment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__GrossValue__c</fullName>
        <label>Gross Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__LocalClearingSystem__c</fullName>
        <description>Specifies the local clearing system for domestic outbound payments based on the payment currency.</description>
        <label>Local Clearing System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACH</fullName>
                </value>
                <value>
                    <fullName>FEDWIRE</fullName>
                </value>
                <value>
                    <fullName>FASTER_PAYMENTS</fullName>
                </value>
                <value>
                    <fullName>BPAY</fullName>
                </value>
                <value>
                    <fullName>BANK_TRANSFER</fullName>
                </value>
                <value>
                    <fullName>FPS</fullName>
                </value>
                <value>
                    <fullName>RTGS</fullName>
                </value>
                <value>
                    <fullName>FAST</fullName>
                </value>
                <value>
                    <fullName>GIRO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__LocalGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local GLA</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Payments Local GLA</relationshipLabel>
        <relationshipName>PaymentsLocalGla</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Payments (Payment Currency)</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentDate__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentDestination__c</fullName>
        <description>Specifies the outbound payment destination.</description>
        <label>Payment Destination</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Domestic</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__PaymentDetailsTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select a payment template to create a new payment proposal based on saved filter selection.</inlineHelpText>
        <label>Payment Template</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The selected Template does not belong to same Company as the Payment. Choose a Template and try again.</errorMessage>
            <filterItems>
                <field>c2g__PaymentDetailsTemplate__c.c2g__OwnerCompany__c</field>
                <operation>equals</operation>
                <valueField>$Source.c2g__OwnerCompany__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__PaymentDetailsTemplate__c</referenceTo>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentMediaTypes__c</fullName>
        <label>Payment Media</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentMethodMedia__c</fullName>
        <description>Specifies the payment method that will be copied later to the Payment Media.</description>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Electronic</fullName>
                </value>
                <value>
                    <fullName>Asperato</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__PaymentMethod__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Electronic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__PaymentRate__c</fullName>
        <label>Payment Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Template</label>
        <referenceTo>c2g__codaPaymentTemplate__c</referenceTo>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentTypes__c</fullName>
        <label>Payment Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentValueRollup__c</fullName>
        <label>Deprecated: Payment Value</label>
        <summarizedField>c2g__codaPaymentAccountLineItem__c.c2g__PaymentValue__c</summarizedField>
        <summaryForeignKey>c2g__codaPaymentAccountLineItem__c.c2g__Payment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentValueTotal__c</fullName>
        <label>Payment Value</label>
        <summarizedField>c2g__codaPaymentAccountLineItem__c.c2g__PaymentValueTotal__c</summarizedField>
        <summaryFilterItems>
            <field>c2g__codaPaymentAccountLineItem__c.c2g__AccountSelected__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>c2g__codaPaymentAccountLineItem__c.c2g__Payment__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentValue__c</fullName>
        <label>DEPRECATED: Payment Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Financial period</description>
        <label>Period</label>
        <referenceTo>c2g__codaPeriod__c</referenceTo>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__RemittancesPrintDate__c</fullName>
        <label>Remittances Print Date</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__RemittancesPrinted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remittances Printed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__SDRDimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>c2g__codaDimension1__c.c2g__Disabled__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipName>PaymentsSDR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SDRDimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>c2g__codaDimension2__c.c2g__Disabled__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipName>PaymentsSDR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SDRDimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>c2g__codaDimension3__c.c2g__Disabled__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipName>PaymentsSDR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SettlementDiscountReceivedLocalGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Settlement Discount Local GLA</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Payments Settlement Discount Received Local GLA</relationshipLabel>
        <relationshipName>PaymentsSettlementDiscountLocalGLA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SettlementDiscountReceived__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Settlement Discount GLA</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Payments (Settlement Discount)</relationshipLabel>
        <relationshipName>PaymentsSettlementDiscountReceived</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__SplitInvoiceForSeparatePayments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that PaymentsPlus will create one check per invoice instead of one check per account.</description>
        <label>Select Invoices for Separate Payments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Retrieving</fullName>
                </value>
                <value>
                    <fullName>Retrieved</fullName>
                </value>
                <value>
                    <fullName>Selecting</fullName>
                </value>
                <value>
                    <fullName>Selected</fullName>
                    <default>true</default>
                    <label>Selected</label>
                </value>
                <value>
                    <fullName>Refined</fullName>
                </value>
                <value>
                    <fullName>Proposed</fullName>
                </value>
                <value>
                    <fullName>Prepared</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Posted</fullName>
                </value>
                <value>
                    <fullName>Matched</fullName>
                </value>
                <value>
                    <fullName>Discarded</fullName>
                </value>
                <value>
                    <fullName>Preparing Media Error</fullName>
                </value>
                <value>
                    <fullName>Preparing for Media</fullName>
                </value>
                <value>
                    <fullName>Media Prepared</fullName>
                </value>
                <value>
                    <fullName>Ready to Post</fullName>
                </value>
                <value>
                    <fullName>Background Posting</fullName>
                </value>
                <value>
                    <fullName>Discarding</fullName>
                </value>
                <value>
                    <fullName>Canceling</fullName>
                </value>
                <value>
                    <fullName>Part Canceled</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Canceling Error</fullName>
                </value>
                <value>
                    <fullName>Account Removal Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__TransactionsPreloaded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Active when transactions have been preloaded to the Payment Proposal in Lightning Experience.</description>
        <label>Transactions Preloaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Version__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ffaci__CongaTemplateCheck__c</fullName>
        <formula>c2g__BankAccount__r.ffaci__CongaTemplateCheck__c</formula>
        <label>Conga Template Check</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffaci__CongaTemplateRemittance__c</fullName>
        <formula>c2g__OwnerCompany__r.ffaci__CongaTemplateRemittance__c</formula>
        <label>Conga Template Remittance</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffaci__CurrencyCulture__c</fullName>
        <label>Currency Culture</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__PaymentCurrencyName__c</fullName>
        <formula>c2g__PaymentCurrency__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Currency Name</label>
        <type>Text</type>
    </fields>
    <label>Vendor Payment</label>
    <listViews>
        <fullName>Cancelled</fullName>
        <columns>NAME</columns>
        <columns>c2g__BankAccount__c</columns>
        <columns>c2g__PaymentDate__c</columns>
        <columns>c2g__Period__c</columns>
        <columns>c2g__GrossValueTotal__c</columns>
        <columns>c2g__PaymentValueTotal__c</columns>
        <columns>c2g__PaymentMediaTypes__c</columns>
        <columns>c2g__PaymentMethod__c</columns>
        <columns>c2g__Status__c</columns>
        <columns>c2g__DiscardReason__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>c2g__OwnerCompany__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>c2g__Status__c</field>
            <operation>equals</operation>
            <value>Canceled</value>
        </filters>
        <label>Cancelled</label>
    </listViews>
    <listViews>
        <fullName>FF_Council_of_International_Schools_Inc_codaPayment</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Council of International Schools, Inc</label>
        <queue>FF_Council_of_International_Schools_Inc</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Council_of_International_Schools_codaPayment</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Council of International Schools</label>
        <queue>FF_Council_of_International_Schools</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Matched</fullName>
        <columns>NAME</columns>
        <columns>c2g__BankAccount__c</columns>
        <columns>c2g__PaymentDate__c</columns>
        <columns>c2g__Period__c</columns>
        <columns>c2g__GrossValueTotal__c</columns>
        <columns>c2g__PaymentValueTotal__c</columns>
        <columns>c2g__PaymentMediaTypes__c</columns>
        <columns>c2g__PaymentMethod__c</columns>
        <columns>c2g__Status__c</columns>
        <columns>c2g__DiscardReason__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>c2g__OwnerCompany__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>c2g__Status__c</field>
            <operation>equals</operation>
            <value>Matched</value>
        </filters>
        <label>Matched</label>
    </listViews>
</CustomObject>